--- a/politics/leli-raj/aether.html
+++ b/politics/leli-raj/aether.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-18 Sat 00:20 -->
+<!-- 2025-12-05 Fri 23:52 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Leftist Ideological Aether and Lay Leftists ⭐</title>
@@ -209,6 +209,7 @@
 <li><a href="#org1b1cb69">2. Real socialism</a></li>
 <li><a href="#org7294b4d">3. Hate vs mockery</a></li>
 <li><a href="#orgf00e486">4. Propaganda so subtle even the ones doing it don&rsquo;t realize.</a></li>
+<li><a href="#org6495a06">5. Cozy corner</a></li>
 </ul>
 </div>
 </div>
@@ -329,10 +330,42 @@ Quote
 </p>
 </div>
 </div>
+<div id="outline-container-org6495a06" class="outline-2">
+<h2 id="org6495a06"><span class="section-number-2">5.</span> Cozy corner</h2>
+<div class="outline-text-2" id="text-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1996898333739438254">Twitter</a></p>
+</p>
+
+<p>
+There is no new victory here, &ldquo;Tata is an evil nefarious organization&rdquo; is a random online talking point with no basis in reality.
+</p>
+
+<p>
+They donate to leftists for the same reason everyone else does: the Left dominates the humanities, NGOs etc. so if some bleeding-heart feels like donating to those things they end up donating to leftists.
+</p>
+
+<p>
+But they also donate to the BJP and to the Ayodhya Museum because those are also things that the BJP has successfully legitimized/inserted into the Ideological Aether.
+</p>
+
+<p>
+In general the right has the habit of finding some specific random thing (some corporation, race etc.), observing that they&rsquo;re left-wing and deciding that they must be the &ldquo;cause&rdquo; of leftism. E.g. &ldquo;why are Tam Brahms/Kashmiri Pandits/Bengalis so woke?&rdquo; &ldquo;Disney/Gillette/Budlight has gone woke&rdquo; etc.
+</p>
+
+<p>
+No, those things are leftist because <b>everything</b> is leftist, everything is soaked and drenched in the Left-wing Ideological Aether. Even <b>RW</b> governments are: that&rsquo;s why they have done stupid things like humanities in IITs.
+</p>
+
+<p>
+We have to <b>raise awareness</b> of how pervasive leftist ideology is in all our institutions and beliefs, make people (including corporations like Tata, and even the BJP government) develop śatrubodha for it. To paraphrase Anita Sarkeesian, &ldquo;eeeeverything is leftist, everything is woke, you have to keep pointing this out again and again and again&rdquo; no matter how annoying it makes you sound.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-10-18 Sat 00:20</p>
+<p class="date">Created: 2025-12-05 Fri 23:52</p>
 </div>
 </body>
 </html>
