--- a/politics/rhetorical-advice/talk.html
+++ b/politics/rhetorical-advice/talk.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-12-03 Wed 13:49 -->
+<!-- 2025-12-05 Fri 23:52 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Talk! All publicity is good publicity</title>
@@ -205,7 +205,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org67cc90e">1. agenda-maxxing</a></li>
+<li><a href="#orgf0c3a9d">1. Why the left incessantly agenda-peddles and &ldquo;politicizes everything&rdquo;, and you should too</a></li>
 </ul>
 </div>
 </div>
@@ -340,9 +340,25 @@ The bulk of the room for improvement lies among organic RWs/BJP supporters like 
 <p>
 cc: @amitmalviya @PMOIndia @narendramodi @BJP4India @BJP4Bengal @AmitShah
 </p>
-<div id="outline-container-org67cc90e" class="outline-2">
-<h2 id="org67cc90e"><span class="section-number-2">1.</span> agenda-maxxing</h2>
+<div id="outline-container-orgf0c3a9d" class="outline-2">
+<h2 id="orgf0c3a9d"><span class="section-number-2">1.</span> Why the left incessantly agenda-peddles and &ldquo;politicizes everything&rdquo;, and you should too</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1966133249190580265">Twitter</a></p>
+</p>
+
+<p>
+While incessantly reiterating one&rsquo;s core points at every opportunity makes one insufferably annoying as an individual,  but is very valuable for your <b>side</b>, because it gets people to implicitly think &ldquo;he&rsquo;s right, just annoying&rdquo;.
+</p>
+
+<p>
+Ahaṃkāra-filled RWs are unwilling to sacrifice personal clout for the greater cause, so they prefer to do cloutmaxxing, epic-pwning and ched-LARPing—to the point that even BJP state handles want to do this, like the Assam handle below.
+</p>
+
+<p>
+We should worship and adore those who do make the sacrifice (e.g. the BJP WB handle, or BOOMER SHERs like the Pradeep Gupta guy I just RTed) to compensate for the personal clout lost.
+</p>
+
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1996045725231153160">Twitter</a></p>
 </p>
@@ -375,7 +391,7 @@ Always stick to those narratives with laser-like focus. Never deflect to big-bra
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-12-03 Wed 13:49</p>
+<p class="date">Created: 2025-12-05 Fri 23:52</p>
 </div>
 </body>
 </html>
