--- a/history/ait.html
+++ b/history/ait.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-12-03 Wed 13:49 -->
+<!-- 2025-12-15 Mon 13:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>AIT vs OIT</title>
@@ -205,33 +205,32 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org109bceb">1. invasions</a></li>
-<li><a href="#orgf809567">2. y-haplogroups</a>
+<li><a href="#orgf809567">1. y-haplogroups</a>
 <ul>
-<li><a href="#org3550efa">2.1. A, B: African tribes</a>
+<li><a href="#org3550efa">1.1. A, B: African tribes</a>
 <ul>
-<li><a href="#org8d5b10e">2.1.1. Q: Siberians -&gt; Native American, some Pamir groups</a></li>
-<li><a href="#org05271fc">2.1.2. K, M, S: Philippines, Melanesian, Micronesian</a></li>
-<li><a href="#orgd7e012f">2.1.3. E-M2: Niger-Congo (Bantu)</a></li>
-<li><a href="#orgc985164">2.1.4. E-M215: Afro-asiatic</a></li>
-<li><a href="#org8b26778">2.1.5. J1: Arabian</a></li>
-<li><a href="#orgbcaef9b">2.1.6. J2: Caucasus</a></li>
-<li><a href="#org68c2be1">2.1.7. R1a: Indo-Aryan, Slavic</a></li>
-<li><a href="#org426059d">2.1.8. R1b: Western European</a></li>
-<li><a href="#org9927968">2.1.9. R2: scattered north Indian isolates</a></li>
-<li><a href="#org802931f">2.1.10. C: Eastern Steppe</a></li>
-<li><a href="#orgaeea425">2.1.11. N: Siberian tribals</a></li>
-<li><a href="#org2ed6c40">2.1.12. O1a: Austronesian</a></li>
-<li><a href="#org5bdd300">2.1.13. O1b: Austroasiatic, Korean, Japanese</a></li>
-<li><a href="#org96ced2e">2.1.14. O2: Sino-Tibetan, Kra-dai, Hmong</a></li>
-<li><a href="#orged8fa05">2.1.15. H: AASI</a></li>
-<li><a href="#org4545c61">2.1.16. L: Malaya/Meluhha Maritime Empire</a></li>
-<li><a href="#orgf1a285b">2.1.17. D: Tibeto-Burman, Japan, Andamanese</a></li>
+<li><a href="#org8d5b10e">1.1.1. Q: Siberians -&gt; Native American, some Pamir groups</a></li>
+<li><a href="#org05271fc">1.1.2. K, M, S: Philippines, Melanesian, Micronesian</a></li>
+<li><a href="#orgd7e012f">1.1.3. E-M2: Niger-Congo (Bantu)</a></li>
+<li><a href="#orgc985164">1.1.4. E-M215: Afro-asiatic</a></li>
+<li><a href="#org8b26778">1.1.5. J1: Arabian</a></li>
+<li><a href="#orgbcaef9b">1.1.6. J2: Caucasus</a></li>
+<li><a href="#org68c2be1">1.1.7. R1a: Indo-Aryan, Slavic</a></li>
+<li><a href="#org426059d">1.1.8. R1b: Western European</a></li>
+<li><a href="#org9927968">1.1.9. R2: scattered north Indian isolates</a></li>
+<li><a href="#org802931f">1.1.10. C: Eastern Steppe</a></li>
+<li><a href="#orgaeea425">1.1.11. N: Siberian tribals</a></li>
+<li><a href="#org2ed6c40">1.1.12. O1a: Austronesian</a></li>
+<li><a href="#org5bdd300">1.1.13. O1b: Austroasiatic, Korean, Japanese</a></li>
+<li><a href="#org96ced2e">1.1.14. O2: Sino-Tibetan, Kra-dai, Hmong</a></li>
+<li><a href="#orged8fa05">1.1.15. H: AASI</a></li>
+<li><a href="#org0a77bc9">1.1.16. L: Iran<sub>N</sub>/IVC</a></li>
+<li><a href="#orgf1a285b">1.1.17. D: Tibeto-Burman, Japan, Andamanese</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#orgd08ce67">3. genetics summary</a></li>
+<li><a href="#orgd08ce67">2. genetics summary</a></li>
 </ul>
 </div>
 </div>
@@ -269,90 +268,70 @@ Possibly other such &ldquo;motivations&rdquo;, like &ldquo;IVC has no horses/wea
 <p>
 But none of this matters to actual object-level questions like why Indians have an excess of Steppe ancestry compared to the IVC.
 </p>
-<div id="outline-container-org109bceb" class="outline-2">
-<h2 id="org109bceb"><span class="section-number-2">1.</span> invasions</h2>
-<div class="outline-text-2" id="text-1">
-<p>
-&gt; &ldquo;You RWs kept talking about Muslim invasions so we had to create a dishonest narrative to counter it :( It&rsquo;s literally your fault!&rdquo;
-</p>
-
-<p>
-I can&rsquo;t believe this needs to be said, but a population mixing event almost 4000 years ago isn&rsquo;t a valid rebuttal to the point of destruction caused by Muslim invasions (whether to the economy, science or temples):
-</p>
-
-<ol class="org-ol">
-<li>At no point did the Aryans have transnational loyalties to some group outside India, because they had no concept of historical memory. This was self-evidently not the case with the Sultanates or Mughals.</li>
-
-<li>Pretty much every Indian is a mix of the three population groups. Even if the Aryans had oppressed other groups racially or religiously (they didn&rsquo;t) &#x2026; that would just have been something some of our ancestors did to the other ones.</li>
-
-<li>Islamist brutalities against Hindus in the subcontinent continue to this day, that is why they continue to be relevant. If there was any religious or ethnic conflict between Aryans and other groups, it had already ended in Vedic times.</li>
-</ol>
-</div>
-</div>
 <div id="outline-container-orgf809567" class="outline-2">
-<h2 id="orgf809567"><span class="section-number-2">2.</span> y-haplogroups</h2>
-<div class="outline-text-2" id="text-2">
+<h2 id="orgf809567"><span class="section-number-2">1.</span> y-haplogroups</h2>
+<div class="outline-text-2" id="text-1">
 </div>
 <div id="outline-container-org3550efa" class="outline-3">
-<h3 id="org3550efa"><span class="section-number-3">2.1.</span> A, B: African tribes</h3>
-<div class="outline-text-3" id="text-2-1">
+<h3 id="org3550efa"><span class="section-number-3">1.1.</span> A, B: African tribes</h3>
+<div class="outline-text-3" id="text-1-1">
 </div>
 <div id="outline-container-org8d5b10e" class="outline-4">
-<h4 id="org8d5b10e"><span class="section-number-4">2.1.1.</span> Q: Siberians -&gt; Native American, some Pamir groups</h4>
+<h4 id="org8d5b10e"><span class="section-number-4">1.1.1.</span> Q: Siberians -&gt; Native American, some Pamir groups</h4>
 </div>
 <div id="outline-container-org05271fc" class="outline-4">
-<h4 id="org05271fc"><span class="section-number-4">2.1.2.</span> K, M, S: Philippines, Melanesian, Micronesian</h4>
+<h4 id="org05271fc"><span class="section-number-4">1.1.2.</span> K, M, S: Philippines, Melanesian, Micronesian</h4>
 </div>
 <div id="outline-container-orgd7e012f" class="outline-4">
-<h4 id="orgd7e012f"><span class="section-number-4">2.1.3.</span> E-M2: Niger-Congo (Bantu)</h4>
+<h4 id="orgd7e012f"><span class="section-number-4">1.1.3.</span> E-M2: Niger-Congo (Bantu)</h4>
 </div>
 <div id="outline-container-orgc985164" class="outline-4">
-<h4 id="orgc985164"><span class="section-number-4">2.1.4.</span> E-M215: Afro-asiatic</h4>
+<h4 id="orgc985164"><span class="section-number-4">1.1.4.</span> E-M215: Afro-asiatic</h4>
 </div>
 <div id="outline-container-org8b26778" class="outline-4">
-<h4 id="org8b26778"><span class="section-number-4">2.1.5.</span> J1: Arabian</h4>
+<h4 id="org8b26778"><span class="section-number-4">1.1.5.</span> J1: Arabian</h4>
 </div>
 <div id="outline-container-orgbcaef9b" class="outline-4">
-<h4 id="orgbcaef9b"><span class="section-number-4">2.1.6.</span> J2: Caucasus</h4>
+<h4 id="orgbcaef9b"><span class="section-number-4">1.1.6.</span> J2: Caucasus</h4>
 </div>
 <div id="outline-container-org68c2be1" class="outline-4">
-<h4 id="org68c2be1"><span class="section-number-4">2.1.7.</span> R1a: Indo-Aryan, Slavic</h4>
+<h4 id="org68c2be1"><span class="section-number-4">1.1.7.</span> R1a: Indo-Aryan, Slavic</h4>
 </div>
 <div id="outline-container-org426059d" class="outline-4">
-<h4 id="org426059d"><span class="section-number-4">2.1.8.</span> R1b: Western European</h4>
+<h4 id="org426059d"><span class="section-number-4">1.1.8.</span> R1b: Western European</h4>
 </div>
 <div id="outline-container-org9927968" class="outline-4">
-<h4 id="org9927968"><span class="section-number-4">2.1.9.</span> R2: scattered north Indian isolates</h4>
+<h4 id="org9927968"><span class="section-number-4">1.1.9.</span> R2: scattered north Indian isolates</h4>
 </div>
 <div id="outline-container-org802931f" class="outline-4">
-<h4 id="org802931f"><span class="section-number-4">2.1.10.</span> C: Eastern Steppe</h4>
+<h4 id="org802931f"><span class="section-number-4">1.1.10.</span> C: Eastern Steppe</h4>
 </div>
 <div id="outline-container-orgaeea425" class="outline-4">
-<h4 id="orgaeea425"><span class="section-number-4">2.1.11.</span> N: Siberian tribals</h4>
+<h4 id="orgaeea425"><span class="section-number-4">1.1.11.</span> N: Siberian tribals</h4>
 </div>
 <div id="outline-container-org2ed6c40" class="outline-4">
-<h4 id="org2ed6c40"><span class="section-number-4">2.1.12.</span> O1a: Austronesian</h4>
+<h4 id="org2ed6c40"><span class="section-number-4">1.1.12.</span> O1a: Austronesian</h4>
 </div>
 <div id="outline-container-org5bdd300" class="outline-4">
-<h4 id="org5bdd300"><span class="section-number-4">2.1.13.</span> O1b: Austroasiatic, Korean, Japanese</h4>
+<h4 id="org5bdd300"><span class="section-number-4">1.1.13.</span> O1b: Austroasiatic, Korean, Japanese</h4>
 </div>
 <div id="outline-container-org96ced2e" class="outline-4">
-<h4 id="org96ced2e"><span class="section-number-4">2.1.14.</span> O2: Sino-Tibetan, Kra-dai, Hmong</h4>
+<h4 id="org96ced2e"><span class="section-number-4">1.1.14.</span> O2: Sino-Tibetan, Kra-dai, Hmong</h4>
 </div>
 <div id="outline-container-orged8fa05" class="outline-4">
-<h4 id="orged8fa05"><span class="section-number-4">2.1.15.</span> H: AASI</h4>
+<h4 id="orged8fa05"><span class="section-number-4">1.1.15.</span> H: AASI</h4>
 </div>
-<div id="outline-container-org4545c61" class="outline-4">
-<h4 id="org4545c61"><span class="section-number-4">2.1.16.</span> L: Malaya/Meluhha Maritime Empire</h4>
+<div id="outline-container-org0a77bc9" class="outline-4">
+<h4 id="org0a77bc9"><span class="section-number-4">1.1.16.</span> L: Iran<sub>N</sub>/IVC</h4>
 </div>
 <div id="outline-container-orgf1a285b" class="outline-4">
-<h4 id="orgf1a285b"><span class="section-number-4">2.1.17.</span> D: Tibeto-Burman, Japan, Andamanese</h4>
+<h4 id="orgf1a285b"><span class="section-number-4">1.1.17.</span> D: Tibeto-Burman, Japan, Andamanese</h4>
 </div>
 </div>
 </div>
 <div id="outline-container-orgd08ce67" class="outline-2">
-<h2 id="orgd08ce67"><span class="section-number-2">3.</span> genetics summary</h2>
-<div class="outline-text-2" id="text-3">
+<h2 id="orgd08ce67"><span class="section-number-2">2.</span> genetics summary</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 <img src="/img/genetics/ternary_2.jpeg" alt="ternary_2.jpeg" />
 </p>
@@ -488,7 +467,7 @@ So there is an ongoing debate about how to resolve these anomalies in text/data 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-12-03 Wed 13:49</p>
+<p class="date">Created: 2025-12-15 Mon 13:57</p>
 </div>
 </body>
 </html>
