--- a/politics/leli-ideology/liberal_ideology.html
+++ b/politics/leli-ideology/liberal_ideology.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-12-03 Wed 13:49 -->
+<!-- 2025-12-15 Mon 13:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Modern liberalism as the ideology of dehātization ⭐</title>
@@ -414,12 +414,29 @@ The former derives beliefs from strict axiomatic foundations while the latter de
 <p>
 Feynman called it &ldquo;Greek school vs Babylonian school&rdquo; IIRC.
 </p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1997960776544592273">Twitter</a></p>
+</p>
+
+
+<p>
+Yes. Though I will say the difference between authoritarian communism and left-liberalism is not &ldquo;economic vs socio-cultural&rdquo; (this is rather due to the eastern bloc not keeping up with new Leftist movements in the West due to happenstance).
+</p>
+
+<p>
+Rather, the former is <b>uncompromising</b> in its methods, while the latter is more śāntīpūrvak/patient. The revolutionary nature and authoritarianism of the former (versus the naggy and democratic nature of the latter) also follows from this.
+</p>
+
+<p>
+The other thing is that the former is more formal in its doctrine, while the latter relies more on an intuitive grasp of ideology and &ldquo;who has moral authority&rdquo; spread among its adherents. This may be compared to the Greek vs Indian (or &ldquo;Babylonian&rdquo; as Feynman called it) approaches to ancient mathematics, or jñāna-yoga vs bhakti-yoga.
+</p>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-12-03 Wed 13:49</p>
+<p class="date">Created: 2025-12-15 Mon 13:57</p>
 </div>
 </body>
 </html>
