--- a/politics/leli-ideology/streetlight.html
+++ b/politics/leli-ideology/streetlight.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-18 Sat 00:20 -->
+<!-- 2025-12-15 Mon 13:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Streetlight</title>
@@ -235,12 +235,12 @@ The good-faith explanation of this is the &ldquo;Streetlight effect&rdquo;: the 
 But these people <b>also</b> without exception support Left-liberals and all of their activist groups and policies that <b>cause</b> these problems in the first place, and fight tooth-and-nail any RW attempt to fix them.
 </p>
 
-<p>
-→ they are soft on crime (the last death penalty in India was for Nirbhaya; anti-death penalty activists routinely brag here about saving some child-rapist or murderer from death row)
-→ they defend the TMC (or the commies before them, whom they learned to use rape as a political tool from)
-→ they support Muslim personal law, and all of the moral corruption in Indian muslim society that comes with it
-→ heck, they even fight for the &ldquo;rights&rdquo; (read: supremacy or favouritism) or even separatism of the very groups that commit these crimes.
-</p>
+<ul class="org-ul">
+<li>they are soft on crime (the last death penalty in India was for Nirbhaya; anti-death penalty activists routinely brag here about saving some child-rapist or murderer from death row)</li>
+<li>they defend the TMC (or the commies before them, whom they learned to use rape as a political tool from)</li>
+<li>they support Muslim personal law, and all of the moral corruption in Indian muslim society that comes with it</li>
+<li>heck, they even fight for the &ldquo;rights&rdquo; (read: supremacy or favouritism) or even separatism of the very groups that commit these crimes.</li>
+</ul>
 
 <p>
 Feminists should just be seen as pro-rape and pro-crime. There is no other explanation for why they constantly diffuse blame away from rapists onto &ldquo;all men&rdquo;, and support the very policies that encourage rape and crime.
@@ -248,7 +248,7 @@ Feminists should just be seen as pro-rape and pro-crime. There is no other expla
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-10-18 Sat 00:20</p>
+<p class="date">Created: 2025-12-15 Mon 13:57</p>
 </div>
 </body>
 </html>
