--- a/politics/misc/rape.html
+++ b/politics/misc/rape.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-12-03 Wed 13:49 -->
+<!-- 2025-12-15 Mon 14:42 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Rape in India</title>
@@ -238,7 +238,7 @@ India&rsquo;s conviction rate for reported rapes hovers around <a href="https://
 </p>
 
 <p>
-To be clear: it doesn&rsquo;t matter that India has a lower rape rate than the West. Obviously, every rape is evil, and there <i>are</i> obvious and effective ways in which the rate of rapes in India can be brought down: wider use of the death penalty especially in cases of rape-and-murder, and purge parties like the TMC (which use rape as a tool to exert political power) from existence.
+To be clear: it doesn&rsquo;t matter that India has a lower rape rate than the West. Obviously, every rape is evil, and there <i>are</i> obvious and effective ways in which the rate of rapes in India can be brought down: increased quantity of courts/judges, wider use of the death penalty especially in cases of rape-and-murder, and purge parties like the TMC (which use rape as a tool to exert political power) from existence.
 </p>
 
 <p>
@@ -294,7 +294,7 @@ and instead urged Indians to &ldquo;challenge this stereotype of the destroyed w
 </p>
 
 <p>
-(the victim subsequently died from the rape.)
+(the victim had already died from the rape.)
 </p>
 
 <p>
@@ -348,12 +348,12 @@ The good-faith explanation of this is the &ldquo;Streetlight effect&rdquo;: the 
 But these people <b>also</b> without exception support Left-liberals and all of their activist groups and policies that <b>cause</b> these problems in the first place, and fight tooth-and-nail any RW attempt to fix them.
 </p>
 
-<p>
-→ they are soft on crime (the last death penalty in India was for Nirbhaya; anti-death penalty activists routinely brag here about saving some child-rapist or murderer from death row)
-→ they defend the TMC (or the commies before them, whom they learned to use rape as a political tool from)
-→ they support Muslim personal law, and all of the moral corruption in Indian muslim society that comes with it
-→ heck, they even fight for the &ldquo;rights&rdquo; (read: supremacy or favouritism) or even separatism of the very groups that commit these crimes.
-</p>
+<ul class="org-ul">
+<li>they are soft on crime (the last death penalty in India was for Nirbhaya; anti-death penalty activists routinely brag here about saving some child-rapist or murderer from death row)</li>
+<li>they defend the TMC (or the commies before them, whom they learned to use rape as a political tool from)</li>
+<li>they support Muslim personal law, and all of the moral corruption in Indian muslim society that comes with it</li>
+<li>heck, they even fight for the &ldquo;rights&rdquo; (read: supremacy or favouritism) or even separatism of the very groups that commit these crimes.</li>
+</ul>
 
 <p>
 Feminists should just be seen as pro-rape and pro-crime. There is no other explanation for why they constantly diffuse blame away from rapists onto &ldquo;all men&rdquo;, and support the very policies that encourage rape and crime.
@@ -366,7 +366,7 @@ Feminists should just be seen as pro-rape and pro-crime. There is no other expla
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-12-03 Wed 13:49</p>
+<p class="date">Created: 2025-12-15 Mon 14:42</p>
 </div>
 </body>
 </html>
