--- a/politics/nirnaya-pill/leli_and_islam.html
+++ b/politics/nirnaya-pill/leli_and_islam.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-06 Thu 23:19 -->
+<!-- 2025-12-15 Mon 13:58 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Left-liberalism weds Islam ⭐</title>
@@ -209,7 +209,8 @@
 <li><a href="#org4747074">2. continuation</a></li>
 <li><a href="#orgf8f7f83">3. the wedding anniversary</a></li>
 <li><a href="#org24c905a">4. Would education solve Islamic radicalism?</a></li>
-<li><a href="#org1283e24">5. explaining islamism</a></li>
+<li><a href="#orgbbd2d3d">5. would immigration solve islamism?</a></li>
+<li><a href="#org1283e24">6. explaining islamism</a></li>
 </ul>
 </div>
 </div>
@@ -349,9 +350,43 @@ The same is <i>not</i> true between Left-liberalism and Islam: Left-liberalism i
 </p>
 </div>
 </div>
-<div id="outline-container-org1283e24" class="outline-2">
-<h2 id="org1283e24"><span class="section-number-2">5.</span> explaining islamism</h2>
+<div id="outline-container-orgbbd2d3d" class="outline-2">
+<h2 id="orgbbd2d3d"><span class="section-number-2">5.</span> would immigration solve islamism?</h2>
 <div class="outline-text-2" id="text-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/2000449822776860859">Twitter</a></p>
+</p>
+
+<blockquote>
+<p>
+Muslims who move to the US become substantially more liberal
+</p>
+</blockquote>
+
+<p>
+Pretty sure this is entirely due to selection. Muslims in the UK are certainly not better than those in Pakistan.
+</p>
+
+<p>
+It also ignores the fact that Muslim immigrants have a very large impact on the views and policies of their host country.
+</p>
+
+<p>
+1.3% of the American population/6% of the UK population and they have been disproportionately influential enough to make Palestine a top cause in the country, get America to regime-change Bangladesh, prevent Kamala Harris from picking a Jewish VP, turn the entire narrative around 9/11 to focus on reprisal killings etc.
+</p>
+
+<p>
+The fundamental problem with this hope—that assimilation into America will naturally lead to discarding Islamist values—is that assimilation into America means assimilation into the dominant Left-liberal culture.
+</p>
+
+<p>
+Unlike with other religions, Left-liberalism does not see itself as opposed to Islam: maybe it is half-heartedly opposed to some personal traditionalism, but is very much encouraging of the Muslim supremacist and Jihad ideologies that are the real problem. Therefore there is no pressure to shed the Muslim supremacism.
+</p>
+</div>
+</div>
+<div id="outline-container-org1283e24" class="outline-2">
+<h2 id="org1283e24"><span class="section-number-2">6.</span> explaining islamism</h2>
+<div class="outline-text-2" id="text-6">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1986022762989711576">Twitter</a></p>
 </p>
@@ -390,7 +425,7 @@ yes, and that tells you exactly how much influence Islamism has over American po
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-06 Thu 23:19</p>
+<p class="date">Created: 2025-12-15 Mon 13:58</p>
 </div>
 </body>
 </html>
