--- a/politics/timepass.html
+++ b/politics/timepass.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-02 Sun 13:15 -->
+<!-- 2025-12-15 Mon 13:58 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Timepass</title>
@@ -539,6 +539,14 @@ Let&rsquo;s rewind 2 days ago hey fucktard, let&rsquo;s rewind 2 years ago you d
 <p>
 Yes and I will pray for a hundred more Gurgaons. Your ooga-booga university, your ooga-booga forest, your favorite poverty-porn slum, will all be uprooted and razed for new gurgaons. A thousand more gurgaons, a gurgaon in your face, a gurgaon up your poop-shoot. you are mortal, but gurgaon is eternal. A million more gurgaons, all your favorite countries will fall, just gurgaons will prevail. No pakistan no bangladesh, just infinite gurgaons. so long as men can see and breathe, there is no higher calling on earth but to populate the universe with gurgaons. Cope and seethe commie.
 </p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1995809681651236977">Twitter</a></p>
+</p>
+
+<p>
+Based. We will exploit everything. Not an inch of land shall exist without producing value to man. Not a drop of water shall flocw into the ocean without being made useful to man. No coal will go unmined, no metal, no oil, no rock or dirt or blade of grass shall stay in the earth absconding from its duty to us. Every last bit of the &ldquo;environment&rdquo; shall be transformed by industrial capitalism and human might into goods for our consumption. Nature shall be bent to our will and taught that her value lies solely in our enjoyment of her; we shall exploit her every bounty, transforming and processing them into more and better resources to quench our insatiable lust for ever-increasing productive capacity. The earth shall be turned into an enormous factory of human utility, then we shall strip the sun of its asteroids and planets and in the name of rainbow capitalism ravage uranus for the service of Brahmanical patriarchy. This is the philosophy of शकन्तव्यं; cope and seethe, commie.
+</p>
 </div>
 </div>
 <div id="outline-container-orga0bff94" class="outline-2">
@@ -636,7 +644,7 @@ Israel is TempleOS. God&rsquo;s temple is finished. Now, God kills CIA until it 
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1829753986943238421">Twitter</a></p>
 </p>
 
-<pre class="example" id="org6740d2f">
+<pre class="example" id="org5d513a1">
 &gt; originate in Maharashtra
 &gt; immediately gain some Southern holdings
 &gt; Prosperity &amp; Hindoo unity
@@ -1040,7 +1048,7 @@ RT=MS2.238
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-02 Sun 13:15</p>
+<p class="date">Created: 2025-12-15 Mon 13:58</p>
 </div>
 </body>
 </html>
