--- a/politics/nirnaya-pill/sharpen.html
+++ b/politics/nirnaya-pill/sharpen.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-12-15 Mon 13:58 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sharpening arguments and swords, and other general social commentary on Islam</title>
@@ -209,6 +209,7 @@
 <li><a href="#orgc70dbfd">2. Weird Islamophilia of bhōsaḍpillers</a></li>
 <li><a href="#org2c4bc8f">3. Dysgenics</a></li>
 <li><a href="#org2eb1b17">4. angry birds</a></li>
+<li><a href="#orged3fa3e">5. humiliation ritual</a></li>
 </ul>
 </div>
 </div>
@@ -317,10 +318,22 @@ Muslims are basically angry birds.
 </p>
 </div>
 </div>
+<div id="outline-container-orged3fa3e" class="outline-2">
+<h2 id="orged3fa3e"><span class="section-number-2">5.</span> humiliation ritual</h2>
+<div class="outline-text-2" id="text-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/2000445071985131980">Twitter</a></p>
+</p>
+
+<p>
+Islam <b>is</b> a humiliation ritual. It demands you spit on your ancestors and worship those who committed unspeakable atrocities against them. Regardless of your background, how poor you/your country may be, whatever challenges you may have in your personal life, it demands that you subjugate all those interests for the sake of an invisible ideology.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-12-15 Mon 13:58</p>
 </div>
 </body>
 </html>
